# game-of-life-pvp

./: README.md  main.py  pyproject.toml  requirements.txt
src/: board.py  main.py
